--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+
+
+
+    <string name="cadastro_operario">CADASTRO</string>
+    <string name="sobre">SOBRE</string>
+    <string name="logout">SAIR</string>
 </resources>
